--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </div>
   
   
-  
+  <div id="root2">
+  </div>
   
   
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
